# IndProg

./: README.md
picture-vr/source/: CMakeLists.txt
picture-vr/source/client/: client.h
picture-vr/source/imitator/: CMakeLists.txt  Matrix.cpp  blender_script.py
picture-vr/source/serializer/: CMakeLists.txt  Tests_google.hpp
picture-vr/source/server/: main.cpp  server.cpp  server.h  unit_test.cpp
task1/: README.md
task2/imitator/: CMakeLists.txt  Car.cpp  Car.h  Imitator.h  TreeLeaves.cpp  TreeNode.cpp  hello_test  main.cpp  unit_test.cpp  vr
task4/: Dockerfile
task4/picture-vr/source/client/: CMakeLists.txt  client.cpp  main.cpp
task4/picture-vr/source/imitator/: Imitator.cpp  Imitator.h  Matrix.h  TreeLeaves.h  TreeNode.h  data.txt  vr
task4/picture-vr/source/serializer/: Serializer.cpp  Serializer.h  Tests.hpp  main.cpp
task4/picture-vr/source/server/: CMakeLists.txt
